--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Taxperts Taxation - Professional Accounting Services</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💼</text></svg>" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
@@ -11,6 +12,23 @@
     <style>
       .hero {
         text-align: center;
+      }
+
+      .hero-container {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+        justify-content: center;
+      }
+
+      .hero-image {
+        flex-shrink: 0;
+        max-width: 250px;
+      }
+
+      .hero-content {
+        flex: 1;
+        min-width: 250px;
       }
 
       .service-icon {
@@ -31,8 +49,43 @@
         flex-wrap: wrap;
       }
 
+      nav a {
+        padding: 0.5rem 1rem;
+        border-radius: var(--border-radius);
+        transition: background-color 0.2s ease;
+      }
+
+      nav a:hover {
+        background-color: var(--form-element-background-color);
+      }
+
       article {
         flex: 1 1 280px;
+      }
+
+      @media (max-width: 768px) {
+        nav ul {
+          gap: 0.3rem;
+        }
+
+        nav h1 {
+          font-size: 1.1rem;
+          margin-right: auto;
+        }
+
+        nav a {
+          padding: 0.3rem 0.6rem;
+          font-size: 0.85rem;
+        }
+
+        .hero-container {
+          flex-direction: column;
+          gap: 1rem;
+        }
+
+        .hero-content {
+          text-align: center;
+        }
       }
 
       .success-message {
@@ -69,24 +122,34 @@
     <!-- Hero Section -->
     <div class="hero">
       <div class="container">
-        <h1>Professional Accounting Solutions You Can Trust</h1>
-        <p>
-          Expert tax preparation, bookkeeping, and financial planning for
-          individuals and businesses
-        </p>
-        <div class="cta-buttons">
-          <button
-            onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})"
-          >
-            Schedule Consultation
-          </button>
-          <button
-            role="button"
-            class="secondary"
-            onclick="document.getElementById('services').scrollIntoView({behavior: 'smooth'})"
-          >
-            Learn More
-          </button>
+        <div class="hero-container">
+          <div class="hero-content">
+            <h1>Professional Accounting Solutions You Can Trust</h1>
+            <p>
+              Expert tax preparation, bookkeeping, and financial planning for
+              individuals and businesses
+            </p>
+            <div class="cta-buttons">
+              <button
+                onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})"
+              >
+                Schedule Consultation
+              </button>
+              <button
+                role="button"
+                class="secondary"
+                onclick="document.getElementById('services').scrollIntoView({behavior: 'smooth'})"
+              >
+                Learn More
+              </button>
+            </div>
+          </div>
+          <img
+            src="assets/manish.png"
+            alt="Manish"
+            class="hero-image"
+            style="border-radius: 12px"
+          />
         </div>
       </div>
     </div>
@@ -156,19 +219,19 @@
 
       <!-- About Section -->
       <section id="about">
-        <h2>About Taxperts</h2>
+        <h2>About Manish Kumar</h2>
         <p>
           With over 20 years of experience in accounting and tax services,
-          Taxperts has helped hundreds of clients achieve their financial goals.
-          We pride ourselves on providing personalized service, attention to
+          Manish Kumar has helped hundreds of clients achieve their financial goals.
+          I pride myself on providing personalized service, attention to
           detail, and expert guidance tailored to each client's unique
           situation.
         </p>
         <p>
-          Our team of certified accountants is committed to staying current with
+          As a certified accountant, I am committed to staying current with
           the latest tax laws and accounting standards to ensure you receive the
-          best possible service and advice. We believe in building long-term
-          relationships with our clients based on trust, integrity, and results.
+          best possible service and advice. I believe in building long-term
+          relationships with my clients based on trust, integrity, and results.
         </p>
       </section>
 
