--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@
                 Learn More
               </button>
             </div>
+            <div style="display: flex; gap: 1.5rem; flex-wrap: wrap; justify-content: center; align-items: center; margin-top: 2rem">
+              <div style="text-align: center">
+                <img src="assets/chartered.png" alt="Chartered Accountants Australia + New Zealand" style="max-width: 120px; height: auto">
+              </div>
+              <div style="text-align: center">
+                <img src="assets/tpracboard.png" alt="Tax Practitioners Board Registered" style="max-width: 120px; height: auto">
+              </div>
+            </div>
           </div>
           <img
             src="assets/manish.png"
