--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Taxperts Taxation - Professional Accounting Services</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💼</text></svg>" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💼</text></svg>"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
@@ -143,12 +146,29 @@
                 Learn More
               </button>
             </div>
-            <div style="display: flex; gap: 1.5rem; flex-wrap: wrap; justify-content: center; align-items: center; margin-top: 2rem">
+            <div
+              style="
+                display: flex;
+                gap: 1.5rem;
+                flex-wrap: wrap;
+                justify-content: center;
+                align-items: center;
+                margin-top: 2rem;
+              "
+            >
               <div style="text-align: center">
-                <img src="assets/chartered.png" alt="Chartered Accountants Australia + New Zealand" style="max-width: 120px; height: auto">
+                <img
+                  src="assets/chartered.png"
+                  alt="Chartered Accountants Australia + New Zealand"
+                  style="max-width: 120px; height: auto"
+                />
               </div>
               <div style="text-align: center">
-                <img src="assets/tpracboard.png" alt="Tax Practitioners Board Registered" style="max-width: 120px; height: auto">
+                <img
+                  src="assets/tpracboard.png"
+                  alt="Tax Practitioners Board Registered"
+                  style="max-width: 120px; height: auto"
+                />
               </div>
             </div>
           </div>
@@ -230,14 +250,14 @@
         <h2>About Manish Kumar</h2>
         <p>
           With over 20 years of experience in accounting and tax services,
-          Manish Kumar has helped hundreds of clients achieve their financial goals.
-          I pride myself on providing personalized service, attention to
+          Manish Kumar has helped hundreds of clients achieve their financial
+          goals. I pride myself on providing personalized service, attention to
           detail, and expert guidance tailored to each client's unique
           situation.
         </p>
         <p>
-          As a certified accountant, I am committed to staying current with
-          the latest tax laws and accounting standards to ensure you receive the
+          As a certified accountant, I am committed to staying current with the
+          latest tax laws and accounting standards to ensure you receive the
           best possible service and advice. I believe in building long-term
           relationships with my clients based on trust, integrity, and results.
         </p>
@@ -288,7 +308,7 @@
         >
           <div style="flex: 1 1 250px">
             <h3>📞 Phone</h3>
-            <p>+61 (04) 21 925 323</p>
+            <p>+61 421 925 323</p>
           </div>
           <div style="flex: 1 1 250px">
             <h3>📧 Email</h3>
