--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
         >
           <div style="flex: 1 1 250px">
             <h3>📞 Phone</h3>
-            <p>+61 421 925 323</p>
+            <p><a href="tel:+61421925323">+61 421 925 323</a></p>
           </div>
           <div style="flex: 1 1 250px">
             <h3>📧 Email</h3>
-            <p>taxpertstaxation@gmail.com</p>
+            <p><a href="mailto:taxpertstaxation@gmail.com">taxpertstaxation@gmail.com</a></p>
           </div>
           <div style="flex: 1 1 250px">
             <h3>📍 Location</h3>
