--- a/index.html
+++ b/index.html
@@ -312,7 +312,11 @@
           </div>
           <div style="flex: 1 1 250px">
             <h3>📧 Email</h3>
-            <p><a href="mailto:taxpertstaxation@gmail.com">taxpertstaxation@gmail.com</a></p>
+            <p>
+              <a href="mailto:taxpertstaxation@gmail.com"
+                >taxpertstaxation@gmail.com</a
+              >
+            </p>
           </div>
           <div style="flex: 1 1 250px">
             <h3>📍 Location</h3>
@@ -375,10 +379,7 @@
     <!-- Footer -->
     <footer>
       <div class="container">
-        <p>
-          &copy; 2024 Taxperts - Professional Accounting Services. All rights
-          reserved.
-        </p>
+        <p>&copy; 2024 Taxperts Taxation. All rights reserved.</p>
       </div>
     </footer>
   </body>
