--- a/index.html
+++ b/index.html
@@ -13,8 +13,32 @@
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
     />
     <style>
+      :root {
+        --primary-color: #1e5a96;
+        --primary-light: #2980b9;
+        --accent-color: #27ae60;
+        --light-bg: #f5f7fa;
+        --text-color: #2c3e50;
+      }
+
+      body {
+        --text-color: #2c3e50;
+      }
+
       .hero {
         text-align: center;
+        background: linear-gradient(135deg, #1e5a96 0%, #2980b9 100%);
+        color: white;
+        padding: 3rem 1rem;
+      }
+
+      .hero h1 {
+        color: white;
+      }
+
+      .hero p {
+        color: #ecf0f1;
+        font-size: 1.1rem;
       }
 
       .hero-container {
@@ -45,6 +69,26 @@
         flex-wrap: wrap;
       }
 
+      .hero button {
+        background-color: #27ae60;
+        color: white;
+        border: none;
+        font-weight: 600;
+      }
+
+      .hero button:hover {
+        background-color: #229954;
+      }
+
+      .hero button.secondary {
+        background-color: rgba(255, 255, 255, 0.2);
+        border: 2px solid white;
+      }
+
+      .hero button.secondary:hover {
+        background-color: rgba(255, 255, 255, 0.3);
+      }
+
       nav ul {
         display: flex;
         justify-content: space-between;
@@ -52,14 +96,51 @@
         flex-wrap: wrap;
       }
 
+      nav {
+        background-color: #f5f7fa;
+        border-bottom: 2px solid #e0e0e0;
+      }
+
+      nav h1 {
+        color: #1e5a96;
+      }
+
       nav a {
         padding: 0.5rem 1rem;
         border-radius: var(--border-radius);
         transition: background-color 0.2s ease;
+        color: #2c3e50;
       }
 
       nav a:hover {
-        background-color: var(--form-element-background-color);
+        background-color: #e8f0f7;
+        color: #1e5a96;
+      }
+
+      button:not(.hero button) {
+        background-color: #1e5a96;
+        border-color: #1e5a96;
+      }
+
+      button:not(.hero button):hover {
+        background-color: #2980b9;
+        border-color: #2980b9;
+      }
+
+      h2 {
+        color: #1e5a96;
+      }
+
+      h3 {
+        color: #2c3e50;
+      }
+
+      a:not(.hero a) {
+        color: #1e5a96;
+      }
+
+      a:not(.hero a):hover {
+        color: #2980b9;
       }
 
       article {
