--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         align-items: center;
         gap: 2rem;
         justify-content: center;
+        flex-wrap: wrap;
       }
 
       .hero-image {
@@ -191,26 +192,6 @@
         display: block;
       }
 
-      @media (max-width: 768px) {
-        nav ul {
-          gap: 0.3rem;
-        }
-
-        nav h1 {
-          font-size: 1.1rem;
-          margin-right: auto;
-        }
-
-        nav a {
-          padding: 0.3rem 0.6rem;
-          font-size: 0.85rem;
-        }
-
-        .hero-container {
-          flex-direction: column;
-          gap: 1rem;
-        }
-      }
     </style>
   </head>
   <body>
