--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
 
       .hero {
         text-align: center;
-        background: linear-gradient(135deg, var(--primary) 0%, var(--primary-light) 100%);
+        background: linear-gradient(
+          135deg,
+          var(--primary) 0%,
+          var(--primary-light) 100%
+        );
         color: white;
         padding: 3rem 1rem;
       }
@@ -112,6 +116,13 @@
 
       .hero button.secondary:hover {
         background-color: rgba(255, 255, 255, 0.3) !important;
+      }
+
+      .cta-buttons {
+        display: flex;
+        gap: 1rem;
+        flex-wrap: wrap;
+        justify-content: center;
       }
 
       .hero-container {
@@ -191,7 +202,6 @@
       .success-message.show {
         display: block;
       }
-
     </style>
   </head>
   <body>
@@ -249,11 +259,7 @@
               </div>
             </div>
           </div>
-          <img
-            src="assets/manish.png"
-            alt="Manish"
-            class="hero-image"
-          />
+          <img src="assets/manish.png" alt="Manish" class="hero-image" />
         </div>
       </div>
     </div>
@@ -345,32 +351,41 @@
         <div class="services-grid">
           <article>
             <p>
-              "Taxperts transformed how I manage my business finances. Their
-              attention to detail and proactive approach has saved me thousands
-              in taxes. Highly recommended!"
+              Manish has been fantastic to work with. He’s extremely
+              approachable and always explains scenarios in a clear and
+              easy-to-understand way, which really helps with decision-making. I
+              appreciate his professionalism, patience, and attention to detail.
+              Highly recommend him if you’re looking for a reliable and
+              knowledgeable accountant.
             </p>
-            <div class="testimonial-author">
-              — Sarah Johnson, Small Business Owner
-            </div>
+            <div class="testimonial-author">- Kirti Krishna</div>
           </article>
 
           <article>
             <p>
-              "Working with Taxperts gave me peace of mind knowing my taxes are
-              handled by professionals. They made the entire process stress-free
-              and easy to understand."
+              I’ve had a great experience with Taxperts Services. The service is
+              always prompt, professional, and easy to understand. They take the
+              time to clearly explain all the information, guide me through my
+              tax returns, and handle any additional forms smoothly. I also
+              appreciate the relevant and practical tax advice they provide,
+              which really helps with planning ahead. Highly recommend for
+              anyone looking for reliable and efficient tax support.
             </p>
-            <div class="testimonial-author">— Michael Chen, Freelancer</div>
+            <div class="testimonial-author">- Pritpal Panesar</div>
           </article>
 
           <article>
             <p>
-              "I've been a client for 8 years now. Their team consistently
-              provides excellent service and valuable financial advice. They're
-              more than just accountants—they're trusted advisors."
+              I have been lodging my tax returns from Manish ji from past 16
+              years, and the service has been outstanding. He is very patient
+              thorough, very knowledgeable in taxation rules & regulations and
+              always keep me updated & willing to answer all my questions. My
+              both company and personal tax returns are always organised &
+              lodged on time, I highly recommend them for anyone looking for
+              accountant.
             </p>
             <div class="testimonial-author">
-              — Robert Williams, Manufacturing Company
+              - Parvinder Sunghar, Business owner
             </div>
           </article>
         </div>
