--- a/index.html
+++ b/index.html
@@ -172,10 +172,8 @@
         flex: 1 1 280px;
       }
 
-      .testimonial-author {
-        font-style: italic;
-        color: #666;
-        margin-top: 1rem;
+      .services-grid > blockquote {
+        flex: 1 1 280px;
       }
 
       .contact-info {
@@ -271,8 +269,10 @@
         <h2>Our Services</h2>
         <div class="services-grid">
           <article>
-            <div class="service-icon">📋</div>
-            <h3>Tax Preparation</h3>
+            <header>
+              <div class="service-icon">📋</div>
+              <h3>Tax Preparation</h3>
+            </header>
             <p>
               Comprehensive tax return preparation for individuals and
               businesses. Maximize deductions and minimize your tax burden.
@@ -280,8 +280,10 @@
           </article>
 
           <article>
-            <div class="service-icon">📊</div>
-            <h3>Bookkeeping</h3>
+            <header>
+              <div class="service-icon">📊</div>
+              <h3>Bookkeeping</h3>
+            </header>
             <p>
               Complete bookkeeping services including accounts payable, accounts
               receivable, and financial statement preparation.
@@ -289,8 +291,10 @@
           </article>
 
           <article>
-            <div class="service-icon">💰</div>
-            <h3>Financial Planning</h3>
+            <header>
+              <div class="service-icon">💰</div>
+              <h3>Financial Planning</h3>
+            </header>
             <p>
               Strategic financial planning to help you achieve your long-term
               goals and build wealth for the future.
@@ -298,8 +302,10 @@
           </article>
 
           <article>
-            <div class="service-icon">🏢</div>
-            <h3>Business Accounting</h3>
+            <header>
+              <div class="service-icon">🏢</div>
+              <h3>Business Accounting</h3>
+            </header>
             <p>
               Full-service accounting solutions tailored for small and
               medium-sized businesses. Keep your finances organized and
@@ -308,8 +314,10 @@
           </article>
 
           <article>
-            <div class="service-icon">📈</div>
-            <h3>Payroll Services</h3>
+            <header>
+              <div class="service-icon">📈</div>
+              <h3>Payroll Services</h3>
+            </header>
             <p>
               Reliable payroll processing, tax filing, and compliance management
               for your employees.
@@ -317,8 +325,10 @@
           </article>
 
           <article>
-            <div class="service-icon">✅</div>
-            <h3>Audit Support</h3>
+            <header>
+              <div class="service-icon">✅</div>
+              <h3>Audit Support</h3>
+            </header>
             <p>
               Representation and support during audits. We'll help you navigate
               the process with confidence.
@@ -349,45 +359,37 @@
       <section id="testimonials">
         <h2>What Our Clients Say</h2>
         <div class="services-grid">
-          <article>
-            <p>
-              Manish has been fantastic to work with. He’s extremely
-              approachable and always explains scenarios in a clear and
-              easy-to-understand way, which really helps with decision-making. I
-              appreciate his professionalism, patience, and attention to detail.
-              Highly recommend him if you’re looking for a reliable and
-              knowledgeable accountant.
-            </p>
-            <div class="testimonial-author">- Kirti Krishna</div>
-          </article>
+          <blockquote>
+            Manish has been fantastic to work with. He's extremely
+            approachable and always explains scenarios in a clear and
+            easy-to-understand way, which really helps with decision-making. I
+            appreciate his professionalism, patience, and attention to detail.
+            Highly recommend him if you're looking for a reliable and
+            knowledgeable accountant.
+            <footer>— <cite>Kirti Krishna</cite></footer>
+          </blockquote>
 
-          <article>
-            <p>
-              I’ve had a great experience with Taxperts Services. The service is
-              always prompt, professional, and easy to understand. They take the
-              time to clearly explain all the information, guide me through my
-              tax returns, and handle any additional forms smoothly. I also
-              appreciate the relevant and practical tax advice they provide,
-              which really helps with planning ahead. Highly recommend for
-              anyone looking for reliable and efficient tax support.
-            </p>
-            <div class="testimonial-author">- Pritpal Panesar</div>
-          </article>
+          <blockquote>
+            I've had a great experience with Taxperts Services. The service is
+            always prompt, professional, and easy to understand. They take the
+            time to clearly explain all the information, guide me through my
+            tax returns, and handle any additional forms smoothly. I also
+            appreciate the relevant and practical tax advice they provide,
+            which really helps with planning ahead. Highly recommend for
+            anyone looking for reliable and efficient tax support.
+            <footer>— <cite>Pritpal Panesar</cite></footer>
+          </blockquote>
 
-          <article>
-            <p>
-              I have been lodging my tax returns from Manish ji from past 16
-              years, and the service has been outstanding. He is very patient
-              thorough, very knowledgeable in taxation rules & regulations and
-              always keep me updated & willing to answer all my questions. My
-              both company and personal tax returns are always organised &
-              lodged on time, I highly recommend them for anyone looking for
-              accountant.
-            </p>
-            <div class="testimonial-author">
-              - Parvinder Sunghar, Business owner
-            </div>
-          </article>
+          <blockquote>
+            I have been lodging my tax returns from Manish ji from past 16
+            years, and the service has been outstanding. He is very patient
+            thorough, very knowledgeable in taxation rules & regulations and
+            always keep me updated & willing to answer all my questions. My
+            both company and personal tax returns are always organised &
+            lodged on time, I highly recommend them for anyone looking for
+            accountant.
+            <footer>— <cite>Parvinder Sunghar, Business owner</cite></footer>
+          </blockquote>
         </div>
       </section>
 
