--- a/index.html
+++ b/index.html
@@ -53,15 +53,27 @@
         border-bottom: 2px solid var(--border);
       }
 
+      nav .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 2rem;
+      }
+
       nav h1 {
         color: var(--primary);
+        margin: 0;
       }
 
       nav ul {
         display: flex;
-        justify-content: space-between;
         gap: 1rem;
         flex-wrap: wrap;
+        margin: 0;
+      }
+
+      nav li {
+        list-style: none;
       }
 
       nav a {
@@ -206,14 +218,12 @@
     <!-- Navigation -->
     <nav>
       <div class="container">
+        <h1>Taxperts Taxation</h1>
         <ul>
-          <li><h1>Taxperts Taxation</h1></li>
-          <li>
-            <a href="#services">Services</a>
-            <a href="#about">About</a>
-            <a href="#testimonials">Testimonials</a>
-            <a href="#contact">Contact</a>
-          </li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
