--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
       h2 {
         color: var(--primary);
+        margin-bottom: 2rem;
       }
 
       h3 {
@@ -176,7 +177,7 @@
 
       .services-grid {
         display: flex;
-        gap: 2rem;
+        gap: 1rem;
         flex-wrap: wrap;
       }
 
