--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
       h2 {
         color: var(--primary);
-        margin-bottom: 2rem;
+        margin-top: 2rem;
+        margin-bottom: 1rem;
       }
 
       h3 {
